# clinical-trial-site-selection-agent

./: .env.example  .gitignore  PACKAGE_CONTENTS.md  README.md  SETUP.md  docker-compose.yml  generate_remaining_files.sh
agent/: .env.example  AUTH_SDK_MIGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TOKEN_VALIDATION_MIGRATION.md  examples.py  main.py  pyproject.toml  requirements.txt  test_auth.py  test_auth_integration.py  test_obo_error_handling.py  test_scope_validation.py
agent/src/: __init__.py  agent.py  agent_auth.py  auth.py  auth_adapter.py  client.py  mcp_client.py  state.py
agent/src/auth_sdk/: __init__.py  agent_auth.py  auth_adapter.py  core.py  logger.py  models.py  oauth.py  server.py  session.py  validator.py
agent/src/nodes/: __init__.py  analyze_and_rank.py  generate_report.py  parse_requirements.py  query_demographics.py  query_performance.py
interactive-ui/: .env.example  ARCHITECT_INTEGRATION.md  AUTH_SETUP.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.js
interactive-ui/src/: App.css  App.jsx  config.js  index.css  main.jsx  types.js
interactive-ui/src/components/: ArchitectView.css  ArchitectView.jsx  ArchitectureDiagram.jsx  ArchitectureDiagram.tsx  AuthGuard.css  AuthGuard.jsx  ErrorDisplay.css  ErrorDisplay.jsx  ExampleQueries.css  ExampleQueries.jsx  Header.css  Header.jsx  (+10 more)
mcp-servers/patient-demographics/: .env.example  Dockerfile  QUICKSTART.md  package-lock.json  package.json
mcp-servers/site-performance/: QUICKSTART.md  README.md  package-lock.json  package.json
(+14 files in other folders)
